test/files/neg/no-string-plus-3.scala

object Test {
  def f(s1: String, s2: String) = s1 + s2
}
