test/files/neg/no-string-plus-3.check
no-string-plus-3.scala:3: error: value + is not a member of String
  def f(s1: String, s2: String) = s1 + s2
                                     ^
one error found
